static/psi4manual/1.2.1/_sources/autodoc_dft_gga.rst.txt

.. table:: GGA functionals available in |PSIfour|

   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                Name |                                                                      Description |       GGA? |      Meta? |     X_LRC? |  X_Hybrid? |     C_LRC? |  C_Hybrid? |         C_SCS? SS/OS |          Dispersion? |                                                      Dispersion Description |
   +=====================================+==================================================================================+============+============+============+============+============+============+======================+======================+=============================================================================+
   |                             B86BPBE |                                      B86BPBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                               B97-D |                                        B97-D GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              B97-D3 |                                       B97-D3 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            B97-D3BJ |                                     B97-D3BJ GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             B97-D3M |                                      B97-D3M GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           B97-D3MBJ |                                    B97-D3MBJ GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            B97-GGA1 |                                     B97-GGA1 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                BLYP |                                         BLYP GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           BLYP-D3BJ |                                         BLYP GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                          BLYP-D3MBJ |                                         BLYP GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             BLYP-NL |                                         BLYP GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                 BOP |                                          BOP GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            BOP-D3BJ |                                          BOP GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                BP86 |                                         BP86 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           BP86-D3BJ |                                         BP86 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                          BP86-D3MBJ |                                         BP86 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             BP86-NL |                                         BP86 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                EDF1 |                                         EDF1 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                FT97 |                                         FT97 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                 GAM |                                GAM GGA Minessota Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             HCTH120 |                                      HCTH120 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                        HCTH120-D3BJ |                                 HCTH120-d3bj GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             HCTH147 |                                      HCTH147 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             HCTH407 |                                      HCTH407 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                        HCTH407-D3BJ |                                 HCTH407-d3bj GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            HCTH407P |                                     HCTH407P GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              HCTH93 |                                       HCTH93 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             HCTHP14 |                                      HCTHP14 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             HCTHP76 |                                      HCTHP76 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                 KT2 |                                          KT2 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              MOHLYP |                                       MOHLYP GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             MOHLYP2 |                                      MOHLYP2 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            MPWLYP1W |                                     mPWLYP1W GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                               MPWPW |                                        mPWPW GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                 N12 |                             N12 nonseparable GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            N12-D3BJ |                             N12 nonseparable GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             OBLYP-D |                                      OBLYP-D GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              OP-PBE |                                         BP86 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              OPBE-D |                                       OPBE-D GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            OPWLYP-D |                                     OPWLYP-D GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                 PBE |                                          PBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            PBE-D3BJ |                                          PBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           PBE-D3MBJ |                                          PBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              PBE-NL |                                          PBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                               PBE1W |                                        PBE1W GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            PBELYP1W |                                     PBELYP1W GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             PW86PBE |                                      PW86PBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                PW91 |                                         PW91 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           PW91-D3BJ |                                         PW91 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              REVPBE |                                       revPBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                         REVPBE-D3BJ |                                       revPBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           REVPBE-NL |                                       revPBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                RPBE |                                         RPBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           RPBE-D3BJ |                                         RPBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                               SOGGA |                                      SOGGA Exchange + PBE Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             SOGGA11 |                                          SOGGA11 Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                               TH-FC |                                        TH-FC GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             TH-FCFO |                                      TH-FCFO GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              TH-FCO |                                       TH-FCO GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                               TH-FL |                                        TH-FL GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                 TH1 |                                          TH1 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                 TH2 |                                          TH2 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                 TH3 |                                          TH3 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                 TH4 |                                          TH4 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                VV10 |                                         VV10 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                XLYP |                                         XLYP GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           XLYP-D3BJ |                                    XLYP-d3bj GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+

